# ray-tracer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Shaders/: fs.frag  vs.vert
app/: CMakeLists.txt  Main.cpp
app/assets/shaders/: fs.glsl  vs.glsl  yellowfs.glsl
app/src/: CMakeLists.txt  GlfwContext.cpp  GlfwContext.h  IndexBuffer.cpp  IndexBuffer.h  Main.cpp  Random.h  Ray.h  Shader.cpp  Shader.h  ShaderSource.cpp  ShaderSource.h  Timer.h  Utils.h  VAO.cpp  VAO.h  Vec3.cpp  Vec3.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h
assets/shaders/: fs.frag  fs.glsl  vs.glsl  vs.vert
src/: CMakeLists.txt  Main.cpp
src/App/: Application.cpp  Application.hpp  GlfwContext.cpp  GlfwContext.h  GlfwContext.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  RayTracerLayer.cpp  RayTracerLayer.h  RayTracerLayer.hpp  Window.cpp  Window.h  Window.hpp
src/Core/: Camera.cpp  Camera.hpp  Color.cpp  Color.h  Color.hpp  Hittable.cpp  Hittable.hpp  HittableList.cpp  HittableList.hpp  Interval.cpp  Interval.hpp  Ray.cpp  Ray.hpp  Sphere.cpp  Sphere.hpp
src/Events/: ApplicationEvents.cpp  ApplicationEvents.hpp  Event.hpp  KeyEvents.cpp  KeyEvents.hpp
src/RayTracer/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt  GlfwContext.cpp  GlfwContext.h  IndexBuffer.cpp  IndexBuffer.h  Random.h  RayTracerCore.h  RayTracerLayer.cpp  RayTracerLayer.h  Renderer.cpp  Renderer.h  Result.h  Shader.cpp  Texture.cpp  Texture.h  Timer.h  Utils.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  Window.cpp  Window.h
src/RayTracer/App/: Application.h  GlfwContext.cpp  RayTracerLayer.cpp  Window.cpp
src/RayTracer/Renderer/: Buffer.cpp  Buffer.h  Image.cpp  Image.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/RayTracer/Utils/: Utils.h
src/RayTracerApp/: CMakeLists.txt  Main.cpp
src/Renderer/: Buffer.cpp  Buffer.h  Buffer.hpp  Image.cpp  Image.h  Image.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.h  Shader.hpp  VertexArray.cpp  VertexArray.h  VertexArray.hpp
src/Utils/: GLUtils.hpp  RTWeekend.hpp  Random.h  Random.hpp  RayTracerUtils.hpp  Result.hpp  Time.hpp  Timer.hpp  Utils.hpp
